--- a/styles/index.css
+++ b/styles/index.css
@@ -100,3 +100,96 @@ body{
 .six__box-two{
     flex-grow: 1;
 }
+
+
+/*PAGE TWO*/
+
+.page__two{
+    background-color: #FAA307;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.square{
+    width: 273px;
+    height: 220px;
+    left: 146px;
+    top: 120px;
+    background: #03071E;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    display: flex;
+}
+
+.red{
+    background: #6A040F;
+}
+
+.circle{
+    width: 50px;
+    height: 50px;
+    left: calc(50% - 50px/2 - 385px);
+    top: calc(50% - 50px/2 - 185px);
+    background: #748CAB;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+}
+
+.transparent{
+    border-radius: 2px;
+    border-color: aliceblue;
+    border-style: solid;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.square-one{
+    align-items: flex-start;
+}
+
+.square-two{
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.square-three{
+    align-items: stretch;
+}
+
+.transparent-three{
+    justify-content: space-around;
+}
+
+.square-four{
+    align-items: stretch;
+
+}
+.transparent-four{
+    justify-content: space-evenly;
+}
+
+.square-five{
+    align-items: center;
+}
+.transparent-five{
+    justify-content: center;
+
+}
+
+
+
+
