--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,8 @@ body{
     height: 160px;
     left: 98px;
     top: 90px;
+    box-sizing: border-box;
+    padding: 20px;
     background: #F48C06;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px; 
