--- a/styles/index.css
+++ b/styles/index.css
@@ -115,23 +115,25 @@ body{
 }
 
 .container{
-    width: 70%;
-    height: 70%;
+    max-width: 70%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
     align-items: center;
     justify-content: flex-start;
+    gap: 20px;
 }
 
 .square{
     width: 273px;
     height: 220px;
-    left: 146px;
-    top: 120px;
     background: #03071E;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+    padding: 20px;
     display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    gap: 20px;
 }
 
 .red{
@@ -146,52 +148,30 @@ body{
     background: #748CAB;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50%;
-}
-
-.transparent{
-    border-radius: 2px;
-    border-color: aliceblue;
-    border-style: solid;
-    padding: 20px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
 }
 
 .square-one{
     align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .square-two{
     flex-direction: row-reverse;
-    align-items: flex-start;
-    justify-content: flex-start;
+    flex-wrap: wrap-reverse;
 }
 
 .square-three{
-    align-items: stretch;
-}
-
-.transparent-three{
-    justify-content: space-around;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
 .square-four{
-    align-items: stretch;
-
-}
-.transparent-four{
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-content: space-around;
 }
 
 .square-five{
-    align-items: center;
-}
-.transparent-five{
     justify-content: center;
-
+    align-content: center;
 }
-
-
-
-
